force-app/main/default/objects/Task__c/fields/Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Completion_Status__c</fullName>
    <description>This formula checks the status of a Task and returns a string (&quot;Complete&quot;, &quot;Overdue&quot;, or &quot;In Progress&quot;) based on the conditions met.</description>
    <formula>IF(Completed__c, &quot;Complete&quot;, 
   IF(Estimated_Completion_Date__c &lt; TODAY(), &quot;Overdue&quot;, &quot;In Progress&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Status</label>
    <type>Text</type>
</CustomField>