force-app/main/default/objects/Task__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <description>Number of days, relative to the start of the journey, by which the task should be completed.</description>
    <label>Relative Days To Complete</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>