force-app/main/default/objects/Task__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Used to define a tasks specific requirements.</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>