force-app/main/default/objects/Task__c/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <description>Estimated Completion date is calculated by adding the onboarding start date and relative days to complete fields.</description>
    <formula>Journey__r.Onboarding_Start_Date__c + Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>